fix: Adjust icon vertical alignment to center on text baseline
Icons next to headings were sitting too low after the typeface
change. Changed vertical-align from 'middle' to '-0.125em' to
properly center icons on the text baseline.

Fixes #2673

--- a/packages/cfpb-design-system/src/components/cfpb-icons/icon.scss
+++ b/packages/cfpb-design-system/src/components/cfpb-icons/icon.scss
@@ -7,7 +7,7 @@
 
 .cf-icon-svg {
   height: $cf-icon-height;
-  vertical-align: middle;
+  vertical-align: -0.125em;
   fill: currentcolor;
 
   &--updating,
